Revision history for Music-Duration-Partition

{{$NEXT}}
    Improve the eg/three-eight program.

0.0706 2022-01-19 15:40:39
    - Improve documentation again!

0.0705 2022-01-19 14:44:20
    - Improve documentation.

0.0704 2022-01-19 12:48:51
    - Add an interesting eg/three-eight program.

0.0703 2022-01-19 11:51:15
    - Update the eg/ programs.

0.0702 2020-11-26 11:17:36
    - Use a TICKS constant.
    - Don't import anything from MIDI::Simple.

0.0701 2020-11-23 09:14:15
    - Turn on the remainder attribute by default.
    - Adjust the eg/grouping program.

0.0700 2020-11-23 08:31:27
    - Warn if there is a remainder duration in verbose mode.
    - Append remainder ticks if requested with the remainder attribute.
    - Improve the eg/grouping program.

0.0602 2020-11-23 06:12:41
    - Move the ->BUILD code to an attribute _build method.

0.0601 2020-11-23 05:48:19
    - Add handy comments to the code.
    - Make pool_group a private attribute.

0.0600 2020-11-22 08:42:26
    - Add duration grouping logic.
    - Add the eg/grouping program.
    - Update documentation.

0.0515 2020-09-23 11:47:25
    - Improve the eg/drum-fills-advanced program.
    - Improve documentation.

0.0514 2020-08-17 09:47:06
    - Simplify the eg/seven-eight program.

0.0513 2020-08-15 10:46:34
    - Add the eg/seven-eight example "groove generator" program.

0.0512 2020-06-29 13:12:40
    - Enhance the eg/drum-fills-advanced program.

0.0511 2020-06-29 09:29:37
    - Fork the eg/drum-fills program to eg/drum-fills-advanced.
    - Improve the install suggestions.

0.0510 2020-06-27 13:18:13
    - Improve the eg/drum-fills program again!

0.0509 2020-06-24 10:38:28
    - Lose the redundant counter in the eg/drum-fills program.

0.0508 2020-06-24 06:53:16
    - Fix eg/drum-fills logic.

0.0507 2020-06-19 23:47:01
    - Die if weights and pool are not equal before using Math::Random::Discrete.

0.0506 2020-06-19 04:40:41
    - Improve the eg/drum-fills program.
    - Simplify tests.
